[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = "An implementation of the Lamport one-time signature scheme."
documentation = "https://docs.rs/lamport_signature_plus"
edition = "2021"
keywords = ["lamport", "signature", "crypto", "cryptography"]
license = "Apache-2.0 or MIT"
name = "lamport_signature_plus"
readme = "README.md"
repository = "https://github.com/mikelodder7/lamport_signature_plus"
version = "0.2.0"

[dependencies]
digest = "0.10"
hex = "0.4"
rand = "0.8"
serde = "1.0"
subtle = "2.5"
thiserror = "1.0"
zeroize = "1"

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
whirlpool = "0.10"

[[bench]]
name = "blake2"
harness = false

[[bench]]
name = "sha2"
harness = false

[[bench]]
name = "sha3"
harness = false

[[bench]]
name = "whirlpool"
harness = false

